src/App.css
html, body { height: 100%; }
#page { height: 100% }

.dark {
  display: block;
  height: 100%;
  font-family: Helvetica;
  text-align: center;
  background-color: #111111;
  color: white;
  --div-background:rgba(143, 12, 175, 1);
  --btn-border:#DD380D;
  transition: background-color 0.25s ease-in-out;

}

.light {
  font-family: Helvetica;
  text-align: center;
  background-color: white;
  color: black;
  --div-background:rgba(247, 104, 81, 0.9);
  --btn-border:#DD380D;
  height: 100%;
  transition: background-color 0.25s ease-in-out;
}

* {
  box-sizing: border-box;
  margin: 0px;
  padding: 0px;
}
.container {
  display: flex;
  justify-content: right;
  align-items: center;
  height: 100%;
  margin-right: 5rem;
}

.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 14px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: #19a2c1;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196f3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}
.switch-checkbox {
  padding: 10px;
}

.Header {
  font-size: 4rem;
  text-shadow: 5px 10px 10px var(--div-background);
  color: var(--text-color);
  text-align: center;
  font-family: Helvetica;

}

.btn {
  margin-right: 0.75rem;
  margin-left: 0.75rem;
  -webkit-border-radius: 7px;
  -moz-border-radius: 7px;
  border-radius: 7px;
  color: var(--text-color);
  font-size: 18px;
  font-weight: 100;
  padding: 15px;
  background-color: var(--background-color);
  -webkit-box-shadow: 2px 2px 5px 2px var(--div-background);
  -moz-box-shadow: 2px 2px 5px 2px var(--div-background);
  box-shadow: 2px 2px 5px 2px var(--div-background);
  border: inset var(--div-background) 2px;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
  text-align: center;
}

.btn:hover {
  background: var(--background-color);
  border: inset var(--btn-border)2px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  text-decoration: none;
}

.listOutput {
  height: fit-content;
  border: 10px inset var(--div-background);
  border-radius: 2px;
  margin: 2rem;
  padding: 0.75rem;
  box-shadow: 7px -1px 7px var(--div-background);
  text-align: left;
  list-style-type: none;
}
.nameDiv{
  font-weight: bolder;
  font-size: 30px;
  margin-bottom: 1.2rem;

}
.ratingDiv{
  font-weight: bold;
  font-size: medium;
}
.imgDiv{
  display:block;
  margin-left:auto;
  margin-right: 2rem;
  border: 0.25px solid var(--div-background);
}

